compile_error.txt
ERROR:root:../drivers/pinctrl/amd_get_groups_kunit_test.c: In function ‘amd_get_groups’:
../drivers/pinctrl/amd_get_groups_kunit_test.c:15:22: error: invalid use of undefined type ‘struct amd_gpio’
   15 |         if (!gpio_dev->iomux_base) {
      |                      ^~
In file included from ../include/linux/device.h:15,
                 from ../include/linux/platform_device.h:13,
                 from ../drivers/pinctrl/amd_get_groups_kunit_test.c:3:
../drivers/pinctrl/amd_get_groups_kunit_test.c:16:34: error: invalid use of undefined type ‘struct amd_gpio’
   16 |                 dev_err(&gpio_dev->pdev->dev, "iomux function %d group not supported\n", selector);
      |                                  ^~
../include/linux/dev_printk.h:110:25: note: in definition of macro ‘dev_printk_index_wrap’
  110 |                 _p_func(dev, fmt, ##__VA_ARGS__);                       \
      |                         ^~~
../drivers/pinctrl/amd_get_groups_kunit_test.c:16:17: note: in expansion of macro ‘dev_err’
   16 |                 dev_err(&gpio_dev->pdev->dev, "iomux function %d group not supported\n", selector);
      |                 ^~~~~~~
../drivers/pinctrl/amd_pinconf_set_kunit_test.c: In function ‘test_amd_pinconf_set_debounce’:
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:90:28: error: storage size of ‘dummy_pctldev’ isn’t known
   90 |         struct pinctrl_dev dummy_pctldev;
      |                            ^~~~~~~~~~~~~
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:90:28: warning: unused variable ‘dummy_pctldev’ [-Wunused-variable]
../drivers/pinctrl/amd_pinconf_set_kunit_test.c: In function ‘test_amd_pinconf_set_pull_down’:
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:106:28: error: storage size of ‘dummy_pctldev’ isn’t known
  106 |         struct pinctrl_dev dummy_pctldev;
      |                            ^~~~~~~~~~~~~
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:106:28: warning: unused variable ‘dummy_pctldev’ [-Wunused-variable]
../drivers/pinctrl/amd_pinconf_set_kunit_test.c: In function ‘test_amd_pinconf_set_pull_up’:
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:124:28: error: storage size of ‘dummy_pctldev’ isn’t known
  124 |         struct pinctrl_dev dummy_pctldev;
      |                            ^~~~~~~~~~~~~
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:124:28: warning: unused variable ‘dummy_pctldev’ [-Wunused-variable]
../drivers/pinctrl/amd_pinconf_set_kunit_test.c: In function ‘test_amd_pinconf_set_drive_strength’:
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:142:28: error: storage size of ‘dummy_pctldev’ isn’t known
  142 |         struct pinctrl_dev dummy_pctldev;
      |                            ^~~~~~~~~~~~~
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:142:28: warning: unused variable ‘dummy_pctldev’ [-Wunused-variable]
../drivers/pinctrl/amd_pinconf_set_kunit_test.c: In function ‘test_amd_pinconf_set_invalid_param’:
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:160:28: error: storage size of ‘dummy_pctldev’ isn’t known
  160 |         struct pinctrl_dev dummy_pctldev;
      |                            ^~~~~~~~~~~~~
../drivers/pinctrl/amd_get_groups_kunit_test.c:20:19: error: ‘pmx_functions’ undeclared (first use in this function); did you mean ‘pinfunction’?
   20 |         *groups = pmx_functions[selector].groups;
      |                   ^~~~~~~~~~~~~
      |                   pinfunction
../drivers/pinctrl/amd_get_groups_kunit_test.c:20:19: note: each undeclared identifier is reported only once for each function it appears in
../drivers/pinctrl/amd_get_groups_kunit_test.c: In function ‘set_mock_pinctrl_dev_get_drvdata’:
../drivers/pinctrl/amd_get_groups_kunit_test.c:43:58: error: invalid use of undefined type ‘struct pinctrl_dev’
   43 |         struct amd_gpio *gpio_dev = kunit_kzalloc(pctldev->kunit_test, sizeof(*gpio_dev), GFP_KERNEL);
      |                                                          ^~
../drivers/pinctrl/amd_get_groups_kunit_test.c:44:47: error: invalid use of undefined type ‘struct pinctrl_dev’
   44 |         gpio_dev->pdev = kunit_kzalloc(pctldev->kunit_test, sizeof(*gpio_dev->pdev), GFP_KERNEL);
      |                                               ^~
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:160:28: warning: unused variable ‘dummy_pctldev’ [-Wunused-variable]
../drivers/pinctrl/amd_get_groups_kunit_test.c:45:16: error: returning ‘struct amd_gpio *’ from a function with incompatible return type ‘struct pinctrl_dev *’ [-Werror=incompatible-pointer-types]
   45 |         return gpio_dev;
      |                ^~~~~~~~
../drivers/pinctrl/amd_pinconf_set_kunit_test.c: In function ‘test_amd_pinconf_set_no_configs’:
../drivers/pinctrl/amd_get_groups_kunit_test.c: In function ‘test_amd_get_groups_iomux_base_null’:
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:175:28: error: storage size of ‘dummy_pctldev’ isn’t known
  175 |         struct pinctrl_dev dummy_pctldev;
      |                            ^~~~~~~~~~~~~
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:175:28: warning: unused variable ‘dummy_pctldev’ [-Wunused-variable]
../drivers/pinctrl/amd_pinconf_set_kunit_test.c: In function ‘test_amd_pinconf_set_invalid_pin’:
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:186:28: error: storage size of ‘dummy_pctldev’ isn’t known
  186 |         struct pinctrl_dev dummy_pctldev;
      |                            ^~~~~~~~~~~~~
../drivers/pinctrl/amd_get_groups_kunit_test.c:52:65: error: invalid application of ‘sizeof’ to incomplete type ‘struct pinctrl_dev’
   52 |         struct pinctrl_dev *pctldev = kunit_kzalloc(test, sizeof(*pctldev), GFP_KERNEL);
      |                                                                 ^
../drivers/pinctrl/amd_pinconf_set_kunit_test.c:186:28: warning: unused variable ‘dummy_pctldev’ [-Wunused-variable]
../drivers/pinctrl/amd_get_groups_kunit_test.c:48:33: error: initialization of ‘struct amd_gpio *’ from incompatible pointer type ‘struct pinctrl_dev *’ [-Werror=incompatible-pointer-types]
   48 | #define pinctrl_dev_get_drvdata set_mock_pinctrl_dev_get_drvdata
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../drivers/pinctrl/amd_get_groups_kunit_test.c:53:37: note: in expansion of macro ‘pinctrl_dev_get_drvdata’
   53 |         struct amd_gpio *gpio_dev = pinctrl_dev_get_drvdata(pctldev);
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~
../drivers/pinctrl/amd_get_groups_kunit_test.c: In function ‘test_amd_get_groups_valid_selector’:
../drivers/pinctrl/amd_get_groups_kunit_test.c:64:65: error: invalid application of ‘sizeof’ to incomplete type ‘struct pinctrl_dev’
   64 |         struct pinctrl_dev *pctldev = kunit_kzalloc(test, sizeof(*pctldev), GFP_KERNEL);
      |                                                                 ^
../drivers/pinctrl/amd_get_groups_kunit_test.c:48:33: error: initialization of ‘struct amd_gpio *’ from incompatible pointer type ‘struct pinctrl_dev *’ [-Werror=incompatible-pointer-types]
   48 | #define pinctrl_dev_get_drvdata set_mock_pinctrl_dev_get_drvdata
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../drivers/pinctrl/amd_get_groups_kunit_test.c:65:37: note: in expansion of macro ‘pinctrl_dev_get_drvdata’
   65 |         struct amd_gpio *gpio_dev = pinctrl_dev_get_drvdata(pctldev);
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~
../drivers/pinctrl/amd_get_groups_kunit_test.c: In function ‘test_amd_get_groups_invalid_selector’:
../drivers/pinctrl/amd_get_groups_kunit_test.c:78:65: error: invalid application of ‘sizeof’ to incomplete type ‘struct pinctrl_dev’
   78 |         struct pinctrl_dev *pctldev = kunit_kzalloc(test, sizeof(*pctldev), GFP_KERNEL);
      |                                                                 ^
../drivers/pinctrl/amd_get_groups_kunit_test.c:48:33: error: initialization of ‘struct amd_gpio *’ from incompatible pointer type ‘struct pinctrl_dev *’ [-Werror=incompatible-pointer-types]
   48 | #define pinctrl_dev_get_drvdata set_mock_pinctrl_dev_get_drvdata
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../drivers/pinctrl/amd_get_groups_kunit_test.c:79:37: note: in expansion of macro ‘pinctrl_dev_get_drvdata’
   79 |         struct amd_gpio *gpio_dev = pinctrl_dev_get_drvdata(pctldev);
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[5]: *** [../scripts/Makefile.build:287: drivers/pinctrl/amd_get_groups_kunit_test.o] Error 1
make[5]: *** Waiting for unfinished jobs....
make[5]: *** [../scripts/Makefile.build:287: drivers/pinctrl/amd_pinconf_set_kunit_test.o] Error 1
make[4]: *** [../scripts/Makefile.build:554: drivers/pinctrl] Error 2
make[4]: *** Waiting for unfinished jobs....
make[3]: *** [../scripts/Makefile.build:554: drivers] Error 2
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [/home/amd/linux/Makefile:2003: .] Error 2
make[1]: *** [/home/amd/linux/Makefile:248: __sub-make] Error 2
make: *** [Makefile:248: __sub-make] Error 2

[20:09:43] Configuring KUnit Kernel ...
[20:09:43] Building KUnit Kernel ...
Populating config with:
$ make ARCH=x86_64 O=.kunit olddefconfig
Building with:
$ make all compile_commands.json scripts_gdb ARCH=x86_64 O=.kunit --jobs=4
